--- a/web-app/templates/error.html
+++ b/web-app/templates/error.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block container %}
+{% extends 'bootstrap/base.html' %} {% block content %}
 <h2>Uh oh!</h2>
 <p>
   Unfortunately, it seems that we have encountered an error... and here it is:
