--- a/web-app/templates/job.html
+++ b/web-app/templates/job.html
@@ -1,50 +1,56 @@
-{% extends 'base.html' %}
+{% extends 'bootstrap/base.html' %}
 
 {% block navbar %}
-
-<div class="container">
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">ML Client</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
-                        </li>
+<div class="navbar" role="navigation">
+    <div class="container">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">ML Client</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            </li>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
-    <main>{% block container %} {% endblock %}</main>
-    <footer>
-        <p>
-            &copy; 2022. Shared under the GPL3 license. Source code available at
-            <a href="https://github.com/software-students-fall2022/containerized-app-exercise-team3/">available on
-                Github.</a>
-        </p>
-    </footer>
+            </nav>
+        </header>
+        <main>{% block content %} {% endblock %}</main>
+        <footer>
+            <p>
+                &copy; 2022. Shared under the GPL3 license. Source code available at
+                <a href="https://github.com/software-students-fall2022/containerized-app-exercise-team3/">available on
+                    Github.</a>
+            </p>
+        </footer>
+    </div>
 </div>
-
 {% endblock %}
 
-{% block container %}
+{% block content %}
 
-    <h3>Details for {{ job.name }}</h3>
-    <span class="badge bg-success">{{job.status}}</span><br>
-    <small>Created at {{ job.creation_time }}</small><br>
-    <small>Completed at {{ job.completion_time }}</small><br>
-    <!-- <small>Audio file: <span class="placeholder col-1"></span></small><br> -->
-    <h2>Transcript</h2>
-    <p>{{ job.transcript }}</p>
-    <h3>Statistics</h3>
-    <small>Average time for each token: {{avg_time}}</small><br>
-    <small>Average confidence for each token: {{avg_confidence}}</small><br>
+<h3>Details for {{ job.name }}</h3>
+<span class="badge bg-success">{{job.status}}</span><br>
+<small>Created at {{ job.creation_time }}</small><br>
+<small>Completed at {{ job.completion_time }}</small><br>
+<!-- <small>Audio file: <span class="placeholder col-1"></span></small><br> -->
+<h2>Transcript</h2>
+<p>{{ job.transcript }}</p>
+<h3>Statistics</h3>
+<small>Average time for each token: {{avg_time}}</small><br>
+<small>Average confidence for each token: {{avg_confidence}}</small><br>
 
-    <a href="/"><button type="button" class="btn btn-primary">Return</button></a>
+<a href="/"><button type="button" class="btn btn-primary">Return</button></a>
+{% endblock %}
+
+{% block scripts %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 {% endblock %}
