--- a/web-app/templates/register.html
+++ b/web-app/templates/register.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'bootstrap/base.html' %}
 
 {% block title %}Log in{% endblock %}
 
@@ -13,10 +13,14 @@
         body {
         display: flex;
         align-items: center;
-        padding-top: 40px;
+        padding-top: 20px;
         padding-bottom: 80px;
-        padding-left: 570px;
+        padding-left: 800px;
         background-color: #ffffff;
+        }
+
+        .alert {
+            width:34%;    
         }
 
         .form-signin {
