--- a/web-app/templates/login.html
+++ b/web-app/templates/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'bootstrap/base.html' %}
 
 {% block title %}Log in{% endblock %}
 
@@ -13,9 +13,9 @@
         body {
         display: flex;
         align-items: center;
-        padding-top: 40px;
+        padding-top: 20px;
         padding-bottom: 80px;
-        padding-left: 570px;
+        padding-left: 800px;
         background-color: #ffffff;
         }
 
@@ -64,7 +64,7 @@
         {% endif %}
         <main class="form-signin w-100 m-auto">
           <form action="/home" method='post'>
-            <img class="mb-4" src="../static/images/list-columns-reverse.svg" alt="" width="72" height="57">
+            <img class="mb-4" src="../static/images/list-columns-reverse.png" alt="" width="72" height="57">
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
             <div class="form-floating">
                 <label for="floatingInput">Email address</label>
