--- a/web-client/templates/recorder.html
+++ b/web-client/templates/recorder.html
@@ -1,83 +1,85 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Recorder</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
-    <style>
-        body{
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            padding-top: 4%;
-            border: 0;
-            outline:0;
-        }
-        .btn{
-            border: 0;
-            border-radius: 40px;
-            
-            height: 40px;
-            width: 40px;
-            background-color: red;
-            outline:0;
-        }
 
+<head>
+    <title>Recorder</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<style>
+    body {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding-top: 4%;
+        border: 0;
+        outline: 0;
+    }
 
-    </style>
-    <body>
-        <h1>Push to Talk, Release to Stop</h3>
+    .btn {
+        border: 0;
+        border-radius: 40px;
+
+        height: 40px;
+        width: 40px;
+        background-color: red;
+        outline: 0;
+    }
+</style>
+
+<body>
+    <h1>Push to Talk, Release to Stop</h3>
         <div id='btns'>
-            <button  class="btn" id='start' onmouseover="" onmouseleave="" onmousedown="mouseDown()" onmouseup="mouseUp()"><i class="fa fa-microphone" style = "font-size: 24px; color:white;"></i></button>
+            <button class="btn" id='start' onmouseover="" onmouseleave="" onmousedown="mouseDown()"
+                onmouseup="mouseUp()"><i class="fa fa-microphone" style="font-size: 24px; color:white;"></i></button>
             <!-- <button  class="btn" id='stop'>Stop</button> -->
         </div>
         <div>
-            <ul  class="list" id='ul'></ul>
+            <ul class="list" id='ul'></ul>
         </div>
-        
+
         <script>
             'use strict'
 
             let log = console.log.bind(console),
-            id = val => document.getElementById(val),
-            ul = id('ul'),
-            start = id('start'),
-            stop = id('stop'),
-            stream,
-            recorder,
-            counter=1,
-            chunks,
-            media;
+                id = val => document.getElementById(val),
+                ul = id('ul'),
+                start = id('start'),
+                stop = id('stop'),
+                stream,
+                recorder,
+                counter = 1,
+                chunks,
+                media;
 
 
             media = {
-                        tag: 'audio',
-                        type: 'audio/wav',
-                        ext: '.wav',
-                        gUM: {audio: true}
-                    }
+                tag: 'audio',
+                type: 'audio/wav',
+                ext: '.wav',
+                gUM: { audio: true }
+            }
             navigator.mediaDevices.getUserMedia(media.gUM).then(_stream => {
-                    stream = _stream;
+                stream = _stream;
 
-                    id('btns').style.display = 'inherit';
-                    start.removeAttribute('disabled');
-                    recorder = new MediaRecorder(stream);
-                    recorder.ondataavailable = e => {
+                id('btns').style.display = 'inherit';
+                start.removeAttribute('disabled');
+                recorder = new MediaRecorder(stream);
+                recorder.ondataavailable = e => {
                     chunks.push(e.data);
-                    if(recorder.state == 'inactive')  makeLink();
+                    if (recorder.state == 'inactive') makeLink();
                 };
                 log('got media stream successfully');
             }).catch(log);
-            
-            function mouseDown(){
+
+            function mouseDown() {
                 document.getElementById("start").style.backgroundColor = "darkred";
-                chunks=[];
+                chunks = [];
                 recorder.start();
             }
 
-            function mouseUp(){
+            function mouseUp() {
                 document.getElementById("start").style.backgroundColor = "red";
                 recorder.stop();
             }
@@ -97,15 +99,15 @@
             //     start.removeAttribute('disabled');
             // }
 
-            
 
-            function makeLink(){
-                let blob = new Blob(chunks, {type: media.type })
+
+            function makeLink() {
+                let blob = new Blob(chunks, { type: media.type })
                     , url = URL.createObjectURL(blob)
                     , li = document.createElement('li')
                     , mt = document.createElement(media.tag)
                     , hf = document.createElement('a')
-                ;
+                    ;
                 mt.controls = true;
                 mt.src = url;
                 hf.href = url;
@@ -114,7 +116,7 @@
                 li.appendChild(mt);
                 li.appendChild(hf);
                 ul.appendChild(li);
-                
+
                 // // push blob
                 // fetch('http://localhost:5000', {
                 //     // HTTP request type
@@ -127,7 +129,8 @@
                 // .then(response => console.log('Uploaded'))
                 // .catch(err => alert(err));
             }
-            
+
         </script>
-    </body>
+</body>
+
 </html>
