--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -15,13 +15,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                                <a class="nav-link active" aria-current="page" href="/home">Home</a>
                             </li>
                     </div>
                 </div>
             </nav>
         </header>
-        <main>{% block container %} {% endblock %}</main>
+        <main></main>
         <footer>
             <p>
                 &copy; 2022. Shared under the GPL3 license. Source code available at
@@ -33,7 +33,7 @@
 </div>
 {% endblock %}
 
-{% block container %}
+{% block content %}
 <h2>Current jobs</h2>
 <ul class="list-group">
     {% for job in jobs %}
@@ -59,11 +59,4 @@
     <small>{{avg_completion}}</small><br>
     <small>{{avg_wait}}</small><br>
     <div>
-{% endblock %}
-
-
-{% block scripts %}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
 {% endblock %}
