--- a/web-app/templates/job.html
+++ b/web-app/templates/job.html
@@ -15,13 +15,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                                <a class="nav-link active" aria-current="page" href="/home">Home</a>
                             </li>
                     </div>
                 </div>
             </nav>
         </header>
-        <main>{% block container %} {% endblock %}</main>
+        <main></main>
         <footer>
             <p>
                 &copy; 2022. Shared under the GPL3 license. Source code available at
@@ -33,7 +33,7 @@
 </div>
 {% endblock %}
 
-{% block container %}
+{% block content %}
 
 <h3>Details for {{ job.name }}</h3>
 <span class="badge bg-success">{{job.status}}</span><br>
@@ -49,8 +49,3 @@
 <a href="/"><button type="button" class="btn btn-primary">Return</button></a>
 {% endblock %}
 
-{% block scripts %}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
-{% endblock %}
