--- a/web-app/templates/login.html
+++ b/web-app/templates/login.html
@@ -64,7 +64,7 @@
         {% endif %}
         <main class="form-signin w-100 m-auto">
           <form action="/home" method='post'>
-            <img class="mb-4" src="../static/images/list-columns-reverse.png" alt="" width="72" height="57">
+            <img class="mb-4" src="../static/images/list-columns-reverse.svg" alt="" width="72" height="57">
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
             <div class="form-floating">
                 <label for="floatingInput">Email address</label>
