--- a/web-client/templates/base.html
+++ b/web-client/templates/base.html
@@ -19,10 +19,14 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-left">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/home">Home</a>
                 </li>
+              </ul>
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-right">
+                <a class="navbar-brand" href="/">Logout</a>
+              </ul>
             </div>
           </div>
         </nav>
