Filter chat history

--- a/web-client/templates/history.html
+++ b/web-client/templates/history.html
@@ -4,6 +4,28 @@
     <div class="container p-0">
         <!-- code adapted from: www.bootdey.com -->
 		<h1 class="h3 mb-3">Chat History</h1>
+        <div class="btn-group dropend">
+            <button type="button" class="btn btn-secondary dropdown-toggle mb-3" data-bs-toggle="dropdown" aria-expanded="false">
+              Range
+            </button>
+            <ul class="dropdown-menu">
+                <li>
+                    <a href="all" style="text-decoration: none;">
+                        <button class="dropdown-item" type="button">All messages</button>
+                    </a>
+                </li>
+                <li>
+                    <a href="today" style="text-decoration: none;">
+                        <button class="dropdown-item" type="button">Today</button>
+                    </a>
+                </li>
+                <li>
+                    <a href="this_week" style="text-decoration: none;">
+                        <button class="dropdown-item" type="button">This week</button>
+                    </a>
+                </li>
+            </ul>
+        </div>
 		<div class="card">
 			<div class="row g-0">
 				<div class="col-12 col-lg-12 col-xl-12">
