--- a/web-client/templates/chatroom.html
+++ b/web-client/templates/chatroom.html
@@ -3,31 +3,251 @@
 {% block container %}
 
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <style>
     #start {
-        border: 0;
-        border-radius: 40px;
+        width: 210px;
+        border-radius: 0.375rem !important;
+        color: white;
+    }
 
-        height: 40px;
-        width: 40px;
-        background-color: red;
-        outline: 0;
+    body {
+        margin-top: 20px;
+    }
+
+    .chat-online {
+        color: #34ce57
+    }
+
+    .chat-offline {
+        color: #e4606d
+    }
+
+    .chat-messages {
+        display: flex;
+        flex-direction: column;
+        max-height: 800px;
+        overflow-y: scroll
+    }
+
+    .chat-message-left,
+    .chat-message-right {
+        display: flex;
+        flex-shrink: 0
+    }
+
+    .chat-message-left {
+        margin-right: auto
+    }
+
+    .chat-message-right {
+        flex-direction: row-reverse;
+        margin-left: auto
+    }
+
+    .py-3 {
+        padding-top: 1rem !important;
+        padding-bottom: 1rem !important;
+    }
+
+    .px-4 {
+        padding-right: 1.5rem !important;
+        padding-left: 1.5rem !important;
+    }
+
+    .flex-grow-0 {
+        flex-grow: 0 !important;
+    }
+
+    .border-top {
+        border-top: 1px solid #dee2e6 !important;
+    }
+
+    div.input-group>input {
+        border-top-left-radius: 0.375rem !important;
+        border-bottom-left-radius: 0.375rem !important;
     }
 </style>
 
-<h3>Chatroom Page</h3>
+<main class="content">
+    <div class="container p-0">
 
-<div id='btns'>
-    <button class="btn" id='start' onmousedown="mouseDown()" onmouseup="mouseUp()"><i class="fa fa-microphone"
-            style="font-size: 24px; color:white;"></i></button>
-</div>
+        <h1 class="h3 mb-3">Chatroom</h1>
 
-<div>
-    <ul class="list" id='ul'></ul>
-</div>
+        <div class="card">
+            <div class="row g-0">
+                <div class="col-12 col-lg-7 col-xl-12">
+                    <div class="position-relative">
+                        <div class="chat-messages p-4">
+
+                            <div class="chat-message-right pb-4">
+                                <div>
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                                        class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
+                                    <div class="text-muted small text-nowrap mt-2">2:33 am</div>
+                                </div>
+                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
+                                    <div class="font-weight-bold mb-1">You</div>
+                                    Lorem ipsum dolor sit amet, vis erat denique in, dicunt prodesset te vix.
+                                </div>
+                            </div>
+
+                            <div class="chat-message-left pb-4">
+                                <div>
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar3.png"
+                                        class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
+                                    <div class="text-muted small text-nowrap mt-2">2:34 am</div>
+                                </div>
+                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 ml-3">
+                                    <div class="font-weight-bold mb-1">Sharon Lessman</div>
+                                    Sit meis deleniti eu, pri vidit meliore docendi ut, an eum erat animal commodo.
+                                </div>
+                            </div>
+
+                            <div class="chat-message-right mb-4">
+                                <div>
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                                        class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
+                                    <div class="text-muted small text-nowrap mt-2">2:35 am</div>
+                                </div>
+                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
+                                    <div class="font-weight-bold mb-1">You</div>
+                                    Cum ea graeci tractatos.
+                                </div>
+                            </div>
+
+                            <div class="chat-message-left pb-4">
+                                <div>
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar3.png"
+                                        class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
+                                    <div class="text-muted small text-nowrap mt-2">2:36 am</div>
+                                </div>
+                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 ml-3">
+                                    <div class="font-weight-bold mb-1">Sharon Lessman</div>
+                                    Sed pulvinar, massa vitae interdum pulvinar, risus lectus porttitor magna, vitae
+                                    commodo lectus mauris et velit.
+                                    Proin ultricies placerat imperdiet. Morbi varius quam ac venenatis tempus.
+                                </div>
+                            </div>
+
+                            <div class="chat-message-left pb-4">
+                                <div>
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar3.png"
+                                        class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
+                                    <div class="text-muted small text-nowrap mt-2">2:37 am</div>
+                                </div>
+                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 ml-3">
+                                    <div class="font-weight-bold mb-1">Sharon Lessman</div>
+                                    Cras pulvinar, sapien id vehicula aliquet, diam velit elementum orci.
+                                </div>
+                            </div>
+
+                            <div class="chat-message-right mb-4">
+                                <div>
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                                        class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
+                                    <div class="text-muted small text-nowrap mt-2">2:38 am</div>
+                                </div>
+                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
+                                    <div class="font-weight-bold mb-1">You</div>
+                                    Lorem ipsum dolor sit amet, vis erat denique in, dicunt prodesset te vix.
+                                </div>
+                            </div>
+
+                            <div class="chat-message-left pb-4">
+                                <div>
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar3.png"
+                                        class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
+                                    <div class="text-muted small text-nowrap mt-2">2:39 am</div>
+                                </div>
+                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 ml-3">
+                                    <div class="font-weight-bold mb-1">Sharon Lessman</div>
+                                    Sit meis deleniti eu, pri vidit meliore docendi ut, an eum erat animal commodo.
+                                </div>
+                            </div>
+
+                            <div class="chat-message-right mb-4">
+                                <div>
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                                        class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
+                                    <div class="text-muted small text-nowrap mt-2">2:40 am</div>
+                                </div>
+                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
+                                    <div class="font-weight-bold mb-1">You</div>
+                                    Cum ea graeci tractatos.
+                                </div>
+                            </div>
+
+                            <div class="chat-message-right mb-4">
+                                <div>
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                                        class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
+                                    <div class="text-muted small text-nowrap mt-2">2:41 am</div>
+                                </div>
+                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
+                                    <div class="font-weight-bold mb-1">You</div>
+                                    Morbi finibus, lorem id placerat ullamcorper, nunc enim ultrices massa, id dignissim
+                                    metus urna eget purus.
+                                </div>
+                            </div>
+
+                            <div class="chat-message-left pb-4">
+                                <div>
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar3.png"
+                                        class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
+                                    <div class="text-muted small text-nowrap mt-2">2:42 am</div>
+                                </div>
+                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 ml-3">
+                                    <div class="font-weight-bold mb-1">Sharon Lessman</div>
+                                    Sed pulvinar, massa vitae interdum pulvinar, risus lectus porttitor magna, vitae
+                                    commodo lectus mauris et velit.
+                                    Proin ultricies placerat imperdiet. Morbi varius quam ac venenatis tempus.
+                                </div>
+                            </div>
+
+                            <div class="chat-message-right mb-4">
+                                <div>
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                                        class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
+                                    <div class="text-muted small text-nowrap mt-2">2:43 am</div>
+                                </div>
+                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
+                                    <div class="font-weight-bold mb-1">You</div>
+                                    Lorem ipsum dolor sit amet, vis erat denique in, dicunt prodesset te vix.
+                                </div>
+                            </div>
+
+                            <div class="chat-message-left pb-4">
+                                <div>
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar3.png"
+                                        class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
+                                    <div class="text-muted small text-nowrap mt-2">2:44 am</div>
+                                </div>
+                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 ml-3">
+                                    <div class="font-weight-bold mb-1">Sharon Lessman</div>
+                                    Sit meis deleniti eu, pri vidit meliore docendi ut, an eum erat animal commodo.
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="flex-grow-0 py-3 px-4 border-top">
+                        <div class="input-group">
+                            <button id="start" onmousedown="mouseDown()" onmouseup="mouseUp()"
+                                class="btn btn-warning">Press and Hold to Record</button>&nbsp&nbsp&nbsp&nbsp
+                            <input type="text" class="form-control" placeholder="Type your message">
+                            <button class="btn btn-primary">Send</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 
 <script>
     'use strict'
@@ -36,13 +256,11 @@
         id = val => document.getElementById(val),
         ul = id('ul'),
         start = id('start'),
-        stop = id('stop'),
         stream,
         recorder,
         counter = 1,
         chunks,
         media;
-
 
     media = {
         tag: 'audio',
@@ -50,10 +268,10 @@
         ext: '.wav',
         gUM: { audio: true }
     }
+
     navigator.mediaDevices.getUserMedia(media.gUM).then(_stream => {
         stream = _stream;
 
-        id('btns').style.display = 'inherit';
         start.removeAttribute('disabled');
         recorder = new MediaRecorder(stream);
         recorder.ondataavailable = e => {
@@ -65,32 +283,39 @@
 
     function mouseDown() {
         document.getElementById("start").style.backgroundColor = "darkred";
+
         chunks = [];
         recorder.start();
+
+        document.getElementById("start").textContent = "Recording...";
     }
 
     function mouseUp() {
-        document.getElementById("start").style.backgroundColor = "red";
+        document.getElementById("start").style.backgroundColor = "#ffc107";
         recorder.stop();
+        document.getElementById("start").textContent = "Press and Hold to Record";
     }
 
     function makeLink() {
-        let blob = new Blob(chunks, { type: media.type })
-            , url = URL.createObjectURL(blob)
-            , li = document.createElement('li')
-            , mt = document.createElement(media.tag)
-            , hf = document.createElement('a')
-            ;
-        mt.controls = true;
-        mt.src = url;
-        hf.href = url;
-        hf.download = `${counter++}${media.ext}`;
-        hf.innerHTML = `donwload ${hf.download}`;
-        li.appendChild(mt);
-        li.appendChild(hf);
-        ul.appendChild(li);
-    }
+        const blob = new Blob(chunks, { type: media.type });
+        const url = URL.createObjectURL(blob);
 
+        const formData = new FormData();
+        formData.append('fileBlob', blob, 'file');
+
+        axios({
+            method: "post",
+            url: "/chatroom/audio",
+            data: formData,
+            headers: { "Content-Type": "multipart/form-data" },
+        })
+            .then(function (response) {
+                console.log(response.data);
+            })
+            .catch(function (response) {
+                console.log(response);
+            });
+    }
 </script>
 
 {% endblock %}
