Update profile and edit profile webpages

--- a/web-client/templates/base.html
+++ b/web-client/templates/base.html
@@ -23,6 +23,9 @@
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/home">Home</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/profile">User Profile</a>
+                </li>
               </ul>
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-right">
                 <a class="navbar-brand" href="/">Logout</a>
