--- a/web-client/templates/base.html
+++ b/web-client/templates/base.html
@@ -26,6 +26,12 @@
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/profile">User Profile</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/chatroom">Chat</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/history">Message History</a>
+                </li>
               </ul>
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-right">
                 <a class="navbar-brand" href="/">Logout</a>
