Update test, session cond

--- a/web-client/templates/base.html
+++ b/web-client/templates/base.html
@@ -21,13 +21,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-left">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/home">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/">Chat</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/profile">User Profile</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/chatroom">Chat</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/history">Message History</a>
