Update login route, save chat to db

--- a/web-client/templates/login.html
+++ b/web-client/templates/login.html
@@ -69,7 +69,7 @@
                 </div>
                 {% endif %}
                 <main class="form-signin w-100 m-auto">
-                    <form action="/home" method='post'>
+                    <form action="/login" method='post'>
                         <img class="mb-4" src="../static/images/list-columns-reverse.svg" alt="" width="72" height="57">
                         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
                         <div class="form-floating">
