--- a/web-client/templates/profile.html
+++ b/web-client/templates/profile.html
@@ -6,7 +6,7 @@
 
 <body>
     <div>
-        <a href="/home">
+        <a href="/">
             <button class = "profile_button">Back</button>
         </a>
         
