--- a/web-client/templates/chatroom.html
+++ b/web-client/templates/chatroom.html
@@ -89,8 +89,8 @@
                         <div class="input-group">
                             <button id="start" onmousedown="mouseDown()" onmouseup="mouseUp()"
                                 class="btn btn-warning">Press and Hold to Record</button>&nbsp&nbsp&nbsp&nbsp
-                            <input type="text" class="form-control" placeholder="Type your message">
-                            <button class="btn btn-primary">Send</button>
+                            <!-- <input type="text" class="form-control" placeholder="Type your message"> -->
+                            <!-- <button class="btn btn-primary">Send</button> -->
                         </div>
                     </div>
 
