--- a/web-client/templates/base.html
+++ b/web-client/templates/base.html
@@ -30,9 +30,9 @@
                   <a class="nav-link active" aria-current="page" href="/history">Message History</a>
                 </li>
               </ul>
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-right">
+              <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-right">
                 <a class="navbar-brand" href="/">Logout</a>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </nav>
