Update button and avatar

--- a/web-client/templates/chatroom.html
+++ b/web-client/templates/chatroom.html
@@ -8,7 +8,7 @@
 
 <style>
     #start {
-        width: 210px;
+        width: 300px;
         border-radius: 0.375rem !important;
         color: white;
     }
@@ -169,7 +169,7 @@
                     document.getElementById("chat-messages").innerHTML += `
                         <div class="chat-message-right pb-4">
                             <div>
-                                <img src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                                <img src="/static/default.svg"
                                     class="rounded-circle mr-1" width="40" height="40">
                                 <div class="text-muted small text-nowrap mt-2">2:33 am</div>
                             </div>
@@ -190,7 +190,7 @@
                             document.getElementById("chat-messages").innerHTML += `
                                 <div class="chat-message-left pb-4">
                                     <div>
-                                        <img src="https://bootdey.com/img/Content/avatar/avatar3.png" class="rounded-circle mr-1" width="40" height="40">
+                                        <img src="/static/default.svg" class="rounded-circle mr-1" width="40" height="40">
                                         <div class="text-muted small text-nowrap mt-2">2:36 am</div>
                                     </div>
                                     <div class="flex-shrink-1 bg-light rounded py-2 px-3 ml-3">
